# client

./: .gitignore  config.toml.example  main.py  pyproject.toml
client/: cli.py  client.py  error.py  network.py
client/gui/: components.py  gui.py
