[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Thomas REMY <contact.t.remy777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.2.0"
rich = "^13.7.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
